--- a/pipelines_for_hipergator/ptaeda.fr1_sequencing.config.json
+++ b/pipelines_for_hipergator/ptaeda.fr1_sequencing.config.json
@@ -1340,8 +1340,12 @@
 	"reference": {
 		"V1_01": {
 			"dir": ["/home/d.ence/projects/ref_genomes/loblolly_pine/V1_1/greater_than_3k_ref/"],
-			"base": ["ptaeda.v1.01.fa.masked.longer_than3k.fasta"],
-			"full": ["/home/d.ence/projects/ref_genomes/loblolly_pine/V1_1/greater_than_3k_ref/ptaeda.v1.01.fa.masked.longer_than3k.fasta"]
+			"base": ["ptaeda.v1.01.fa.masked.longer_than3k.fasta.fa"],
+			"full": ["/home/d.ence/projects/ref_genomes/loblolly_pine/V1_1/greater_than_3k_ref/ptaeda.v1.01.fa.masked.longer_than3k.fasta.fa"],
+			"custom": ["/home/d.ence/projects/ref_genomes/loblolly_pine/V1_1/ref_for_Fr1_probes/ptaeda.v1.01.masked.and_elite_RNAseq.probes_bed_scaffolds.fasta"]
+		},
+		"V2_01": {
+			"custom": ["/home/d.ence/projects/ref_genomes/loblolly_pine/V2_1/custom_ref_for_Fr1/Lp.v2.01.seqs_with_probes.with_transdecoder_with_probes.fasta"]
 		}
 	},
 	"conf_template": "/home/d.ence/projects/pinus_taeda_L/aligning_elite_transcriptomes_with_stringtie/sr_config_template.txt",
