added different sample groups to the config.json file

--- a/pipelines_for_hipergator/fr1_project_snakefiles/ptaeda.fr1_sequencing.unique.config.json
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/ptaeda.fr1_sequencing.unique.config.json
@@ -1,4 +1,56 @@
 {
+	"Fr1_meg_samples": {
+		"P04_WA09_i5-511_i7-36_S1012": ["P04_WA09_i5-511_i7-36_S1012"],
+		"P04_WA10_i5-511_i7-54_S1013": ["P04_WA10_i5-511_i7-54_S1013"],
+		"P04_WA11_i5-511_i7-25_S1014": ["P04_WA11_i5-511_i7-25_S1014"],
+		"P04_WA12_i5-511_i7-23_S1015": ["P04_WA12_i5-511_i7-23_S1015"],
+		"P04_WB09_i5-511_i7-63_S1024": ["P04_WB09_i5-511_i7-63_S1024"],
+		"P04_WB10_i5-511_i7-55_S1025": ["P04_WB10_i5-511_i7-55_S1025"],
+		"P04_WB11_i5-511_i7-05_S1026": ["P04_WB11_i5-511_i7-05_S1026"],	
+		"P04_WB12_i5-511_i7-75_S1027": ["P04_WB12_i5-511_i7-75_S1027"],
+		"P04_WC09_i5-511_i7-93_S1036": ["P04_WC09_i5-511_i7-93_S1036"],
+		"P04_WC10_i5-511_i7-47_S1037": ["P04_WC10_i5-511_i7-47_S1037"],
+		"P04_WC11_i5-511_i7-70_S1038": ["P04_WC11_i5-511_i7-70_S1038"],
+		"P04_WC12_i5-511_i7-43_S1039": ["P04_WC12_i5-511_i7-43_S1039"],
+		"P04_WD09_i5-511_i7-64_S1048": ["P04_WD09_i5-511_i7-64_S1048"],
+		"P04_WD10_i5-511_i7-08_S1049": ["P04_WD10_i5-511_i7-08_S1049"],
+		"P04_WD11_i5-511_i7-58_S1050": ["P04_WD11_i5-511_i7-58_S1050"],
+		"P04_WD12_i5-511_i7-09_S1051": ["P04_WD12_i5-511_i7-09_S1051"],
+		"P04_WE08_i5-511_i7-04_S1058": ["P04_WE08_i5-511_i7-04_S1058"],
+		"P04_WE09_i5-511_i7-24_S1059": ["P04_WE09_i5-511_i7-24_S1059"],
+		"P04_WE10_i5-511_i7-61_S1060": ["P04_WE10_i5-511_i7-61_S1060"],
+		"P04_WE11_i5-511_i7-13_S1061": ["P04_WE11_i5-511_i7-13_S1061"],
+		"P04_WF08_i5-511_i7-53_S1068": ["P04_WF08_i5-511_i7-53_S1068"],
+		"P04_WF09_i5-511_i7-46_S1069": ["P04_WF09_i5-511_i7-46_S1069"],
+		"P04_WF10_i5-511_i7-26_S1070": ["P04_WF10_i5-511_i7-26_S1070"],
+		"P04_WF11_i5-511_i7-51_S1071": ["P04_WF11_i5-511_i7-51_S1071"],
+		"P04_WG08_i5-511_i7-68_S1078": ["P04_WG08_i5-511_i7-68_S1078"],
+		"P04_WG09_i5-511_i7-41_S1079": ["P04_WG09_i5-511_i7-41_S1079"],
+		"P04_WG10_i5-511_i7-37_S1080": ["P04_WG10_i5-511_i7-37_S1080"],
+		"P04_WG11_i5-511_i7-96_S1081": ["P04_WG11_i5-511_i7-96_S1081"],
+		"P04_WH08_i5-511_i7-85_S1088": ["P04_WH08_i5-511_i7-85_S1088"],
+		"P04_WH09_i5-511_i7-83_S1089": ["P04_WH09_i5-511_i7-83_S1089"],
+		"P04_WH10_i5-511_i7-34_S1090": ["P04_WH10_i5-511_i7-34_S1090"],
+		"P04_WH11_i5-511_i7-95_S1091": ["P04_WH11_i5-511_i7-95_S1091"]	
+	},
+	"Fr1_prog_samples": {
+	},
+	"non_10_5_indv": {
+		"P02_WA07_i5-509_i7-77_S859": ["P02_WA07_i5-509_i7-77_S859"],
+		"P02_WB07_i5-509_i7-29_S866": ["P02_WB07_i5-509_i7-29_S866"],
+		"P02_WC07_i5-509_i7-62_S873": ["P02_WC07_i5-509_i7-62_S873"],
+		"P02_WD07_i5-509_i7-86_S880": ["P02_WD07_i5-509_i7-86_S880"],
+		"P02_WE07_i5-509_i7-44_S887": ["P02_WE07_i5-509_i7-44_S887"],
+		"P02_WF07_i5-509_i7-33_S894": ["P02_WF07_i5-509_i7-33_S894"],
+		"P02_WG07_i5-509_i7-18_S901": ["P02_WG07_i5-509_i7-18_S901"]
+		
+	},
+	"non_10_5_pooled": {
+		"P04_WA08_i5-511_i7-16_S1011": ["P04_WA08_i5-511_i7-16_S1011"],
+		"P04_WB08_i5-511_i7-57_S1023": ["P04_WB08_i5-511_i7-57_S1023"],
+		"P04_WC08_i5-511_i7-17_S1035": ["P04_WC08_i5-511_i7-17_S1035"],
+		"P04_WD08_i5-511_i7-80_S1047": ["P04_WD08_i5-511_i7-80_S1047"]
+	},
 	"samples": {		
 		"P01_WA01_i5-508_i7-59_S758": ["P01_WA01_i5-508_i7-59_S758"],
 		"P01_WA02_i5-508_i7-27_S759": ["P01_WA02_i5-508_i7-27_S759"],
